--- a/.github/workflows/deploy-to-readme.yml
+++ b/.github/workflows/deploy-to-readme.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - docs
-  workflow_dispatch:   # 手动触发
+  workflow_dispatch:
 
 jobs:
   publish-readme:
@@ -23,15 +23,15 @@ jobs:
           node-version: '20'
 
       - name: Install rdme CLI
-        run: npm install -g @readme/rdme
+        run: npm install -g rdme    # ← 改成 rdme
 
       - name: Publish MDX docs to ReadMe
         env:
           README_API_KEY: ${{ secrets.README_API_KEY }}
         run: |
           rdme docs ./docs \
-            --key "$README_API_KEY" \
-            # 如果你需要指定项目 ID，请取消下一行注释并填写你的项目 ID：
+            --key "$README_API_KEY"
+            # 如果需要指定项目 ID：
             # --id your-project-id
 
       - name: Done
