--- a/.github/workflows/deploy-to-readme.yml
+++ b/.github/workflows/deploy-to-readme.yml
@@ -4,7 +4,8 @@ name: Publish Docs to ReadMe
 on:
   push:
     branches:
-      - main
+      - docs
+
   workflow_dispatch:
     inputs:
       branch:
