--- a/.github/workflows/deploy-to-readme.yml
+++ b/.github/workflows/deploy-to-readme.yml
@@ -25,4 +25,4 @@ jobs:
         # Docs: https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#example-using-versioned-actions
         uses: readmeio/rdme@v10
         with:
-          rdme: docs --key=${{ secrets.README_API_KEY }} --version=2.0
+          rdme: docs ./ --key=${{ secrets.README_API_KEY }} --version=2.0
